# acore

./: Cargo.toml  README.md
docs/ADR/: 001-session-and-context-orchestration.md  002-stateful-session-management.md  README.md
src/: lib.rs  main.rs
